# KORA

./: .gitignore  CONTRIBUTING.md  EXECUTIVE-SUMMARY.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
doc/: benchmark.md
docs/: FAQ.md  GOVERNANCE.md  VISION.md  architecture-overview.md  architecture.md  benchmark-real-app.md  benchmark.md  break-even-model.md  break_even_model.md  budget.md  decentralized-compute.md  decomposition.md  design-principles.md  distributed-execution-protocol.md  dnfm-roadmap.md  execution-model.md  falsifiability.md  glossary.md  limitations.md  manifesto.md  naming.md  performance-model.md  philosophy.md  reasoning-adapter.md  research-agenda.md  runtime-architecture.md  stress-testing.md  structural-critique.md  system-diagram.md  task-ir-spec.md  task-ir.md  telemetry-and-observability.md  testing-and-validation-strategy.md  versioning-and-evolution.md  whitepaper.md
kora/: __init__.py  __main__.py  budget.py  cli.py  cost_model.py  errors.py  executor.py  retrieval.py  scheduler.py  task_ir.py  telemetry.py  verification.py
scripts/: eod_send_report.sh  eod_workflow.sh  generate_daily_report.py  linear_bootstrap_kora.py  linear_post_comment.py  send_daily_report_email.py  send_kora_daily_report_email.py
studio/: README.md
studio/backend/: pyproject.toml
studio/backend/app/: __init__.py  main.py
tests/: test_answer_parsing.py  test_budget.py  test_direct_vs_kora_cases.py  test_executor.py  test_retrieval.py  test_retry.py  test_scheduler.py  test_schema_hardening.py  test_skip_logic.py  test_task_ir.py
(+57 files in other folders)
